--- a/resumeex.css
+++ b/resumeex.css
@@ -7,7 +7,7 @@
 	font-size:18px;
 }
 
-  .sidemenu div
+  .sidemenu
  {
 	 list-style-type:none;
 	 display:block;
@@ -80,17 +80,15 @@ div{
 	.left{
 		width: 100%;
 		display: flex;
+		font-size: 20px;
 }
 
 .bio{
 	width:50%;
 }
-.bio img{
-	width:20em;
-	height:20em;
-	}
 .sidemenu{
 	width:50%;
+	margin-top: 2em;
 }
 .right{
 	width:100%;
@@ -99,14 +97,6 @@ div{
 
 }
 
-@media screen and (max-width: 768px){
-
-	.name{
-
-		font-size:50px;
-
-	}
-} 
 
  /*index*/
 
@@ -120,7 +110,7 @@ div{
 }
 .mainDiv {
    box-shadow: 0 4px 8px 0 #00008B;
-    transition: 0.3s;
+   /*transition: 0.3s;*/
    padding: 40px;
    border:1px solid yellow;
    background-color: #6495ED;
@@ -143,35 +133,54 @@ div{
     padding: 2px 6px;
 }
 
-@media screen and  (min-width: 760px)
- {
+@media screen and (min-width: 760px){
   .mainDiv,.left,  .right {
         background-color: lightgreen;
 
     }
 }
-@media screen and  (max-width: 760px)
- {
+@media screen and (max-width: 760px){
 	 .mainDiv{
 		 flex-wrap: wrap;
+
 	 }
   .childDiv {
         background-color: lightgreen;
         margin-top: 20px;
-				display: flex;
+		display: flex;
 
     }
+    .row{
+    	width: 100%;
+    }
+    .left{
+    	width: 100%;
+    	display:flex;
+    	font-family: Verdana;
+    	
+    }
+    .sidemenu{
+    	flex-wrap:wrap;
+    	margin-top: 0%;
+    }
+    .bio img{
+    	height: 30%;
+    }
+    .right{
+    	width: 100%;
+    	font-family: Verdana;
+    }
+    
+   }
 
-}
 
-
- img{
+ .img img{
   border-radius: 25px;
   height: auto;
   width: 100%;
 }
 body{
-  background-color: 	#DEB887;
+  background-color: #DEB887;
 }
 .button input{
   border-radius: 100px;
